test/param/errors/checkParamTypes.good
checkParamTypes.chpl:18: error: Passed!
